// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginBlockStart renders 0 1`] = `
Array [
  .c0 {
  margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders function 1`] = `
Array [
  .c0 {
  margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders negative number 1`] = `
Array [
  .c0 {
  margin-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    margin-block-start: July;
  }
}

@media April {
  .c0 {
    margin-block-start: August;
  }
}

@media January {
  .c0 {
    margin-block-start: September;
  }
}

@media April {
  .c0 {
    margin-block-start: November;
  }
}

@media June {
  .c0 {
    margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-block-start: July;
  }
}

@media April {
  .c0 {
    margin-block-start: August;
  }
}

@media January {
  .c0 {
    margin-block-start: September;
  }
}

@media April {
  .c0 {
    margin-block-start: November;
  }
}

@media June {
  .c0 {
    margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block-start: January;
  }
}

@media April {
  .c0 {
    margin-block-start: December;
  }
}

@media January {
  .c0 {
    margin-block-start: April;
  }
}

@media April {
  .c0 {
    margin-block-start: May;
  }
}

@media June {
  .c0 {
    margin-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block-start: January;
  }
}

@media April {
  .c0 {
    margin-block-start: December;
  }
}

@media January {
  .c0 {
    margin-block-start: April;
  }
}

@media April {
  .c0 {
    margin-block-start: May;
  }
}

@media June {
  .c0 {
    margin-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  margin-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders string 1`] = `
Array [
  .c0 {
  margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
